--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>test-commons-io-apache</name>
   <url>http://maven.apache.org</url>
+  <properties>
+      <maven.compiler.target>11</maven.compiler.target>
+      <maven.compiler.source>11</maven.compiler.source>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
